fixed spacing issues on desktop layout

--- a/mobile-friendly/mf-css/archives.css
+++ b/mobile-friendly/mf-css/archives.css
@@ -191,16 +191,21 @@
     .main-wrapper {
         display: grid;
         grid-template-columns: 50% 50%;
+        row-gap: 2em;
     }
     .overview-container {
         justify-self: center;
+        width: 90%;
+    }
+    .overview-container img {
+        width: 8em;
     }
     .main-wrapper h1 {
         grid-column: 1/ span 2;
         justify-self: center;
     }
     .overview-summary {
-        width: 24em;
+        width: 27em;
     }
 }
     
